[project]
name = "odoo-addons-oca-account-financial-tools"
version = "17.0.20241016.0"
dependencies = [
    "odoo-addon-account_account_tag_code>=17.0dev,<17.1dev",
    "odoo-addon-account_asset_force_account>=17.0dev,<17.1dev",
    "odoo-addon-account_asset_management>=17.0dev,<17.1dev",
    "odoo-addon-account_check_deposit>=17.0dev,<17.1dev",
    "odoo-addon-account_fiscal_year>=17.0dev,<17.1dev",
    "odoo-addon-account_journal_lock_date>=17.0dev,<17.1dev",
    "odoo-addon-account_journal_restrict_mode>=17.0dev,<17.1dev",
    "odoo-addon-account_lock_date_update>=17.0dev,<17.1dev",
    "odoo-addon-account_move_budget>=17.0dev,<17.1dev",
    "odoo-addon-account_move_line_purchase_info>=17.0dev,<17.1dev",
    "odoo-addon-account_move_line_sale_info>=17.0dev,<17.1dev",
    "odoo-addon-account_move_line_tax_editable>=17.0dev,<17.1dev",
    "odoo-addon-account_move_name_sequence>=17.0dev,<17.1dev",
    "odoo-addon-account_move_post_date_user>=17.0dev,<17.1dev",
    "odoo-addon-account_move_print>=17.0dev,<17.1dev",
    "odoo-addon-account_move_template>=17.0dev,<17.1dev",
    "odoo-addon-account_netting>=17.0dev,<17.1dev",
    "odoo-addon-account_partner_required>=17.0dev,<17.1dev",
    "odoo-addon-account_spread_cost_revenue>=17.0dev,<17.1dev",
    "odoo-addon-account_tax_repartition_line_tax_group_account>=17.0dev,<17.1dev",
    "odoo-addon-account_usability>=17.0dev,<17.1dev",
    "odoo-addon-mail_template_substitute_account_move>=17.0dev,<17.1dev",
    "odoo-addon-purchase_unreconciled>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
